@@ -10,7 +10,7 @@
 * @version		$Id$
 */
 
-define('ICMS_VERSION_NAME','ImpressCMS 1.2.2 Final');
+define('ICMS_VERSION_NAME','ImpressCMS 1.2.3 Beta');
 /**
  * To developers:
  * if you want to get the version number of the core, please use something like:
@@ -31,15 +31,15 @@ define('XOOPS_VERSION', ICMS_VERSION_NAME);
  * 10 = Final
  */
 
-define('ICMS_VERSION_STATUS', 10);
+define('ICMS_VERSION_STATUS', 2);
 
 /**
  * Build number
  *
  * Every release has its own build number, incrementable by 1 everytime we make a release
  */
-// impresscms_1.2.1 Final = 35
-define('ICMS_VERSION_BUILD', 36);
+// impresscms_1.2.2 Final = 36
+define('ICMS_VERSION_BUILD', 37);
 
 /**
  * Latest dbversion of the System Module
