@@ -1,8 +1,8 @@
-ImpressCMS 1.2.2 Final release notes
+ImpressCMS 1.2.3 Beta release notes
 ==================================
 
-The ImpressCMS Project is very proud to announce the final version of its 1.2.2 release! 
-ImpressCMS 1.2.2 Final is a bugfix release and as final, can be used on production sites.
+The ImpressCMS Project is very proud to announce a beta version of its 1.2.3 release! 
+ImpressCMS 1.2.3 is a maintenance release and as a beta release, should not be used on production sites.
 
 Please see the full [[Change Log]] for details in docs/changelog.txt.
 
@@ -25,7 +25,7 @@ This release can be downloaded from the [https://sourceforge.net/projects/impres
 You can easily get ImpressCMS using SVN. Instructions about this can be found here: [[Install_and_update_using_SVN]].
 
 The path for this release is the following:
-https://impresscms.svn.sourceforge.net/svnroot/impresscms/core/releases/impresscms_1.2.2_final/
+https://impresscms.svn.sourceforge.net/svnroot/impresscms/core/releases/impresscms_1.2.3_beta/
 
 If you feel like getting the latest "edge" version, you can checkout the core trunk at :
 
